Change raffle to be based on starter category + index instead of species